--- a/package.json
+++ b/package.json
@@ -6,24 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve": "npx serve@latest out -p 3000"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "lucide-react": "^0.294.0",
     "next": "^13.5.6",
-    "lucide-react": "^0.294.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.6",
+    "firebase-tools": "^13.0.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "eslint": "^8.51.0",
-    "eslint-config-next": "^13.5.6"
+    "typescript": "^5.2.2"
   }
 }
-
