--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve": "npx serve@latest out -p 3000"
   },
   "dependencies": {
+    "firebase-admin": "^12.7.0",
     "lucide-react": "^0.294.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
