assetlink json updated for android deeplink support

--- a/firebase.json
+++ b/firebase.json
@@ -4,9 +4,21 @@
     "ignore": [
       "firebase.json",
       "**/.*",
+      "!**/.well-known/**",
       "**/node_modules/**"
     ],
-    "rewrites": []
+    "rewrites": [],
+    "headers": [
+      {
+        "source": "/.well-known/assetlinks.json",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/json"
+          }
+        ]
+      }
+    ]
   }
 }
 
